--- a/src/index.css
+++ b/src/index.css
@@ -109,3 +109,35 @@ body {
 .warning {
   color: var(--secondary-color);
 }
+
+/*  ----------  STATISTIC PANEL --------------------- */
+
+.statistic {
+  display: flex;
+  justify-content: space-around;
+  background-color: var(--white-color);
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem 0.5rem;
+}
+
+.statistic .stat {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.statistic .label {
+  font-size: 0.75rem;
+  color: #666;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+.statistic .value {
+  font-size: 1.5rem;
+  color: #333;
+  font-weight: 700;
+}
+
